@@ -38,8 +38,12 @@
 <p>2015-05-05  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/miff.c (ReadMIFFImage): Fix possible leak of profiles in
+error path.</li>
 <li>coders/mpc.c (ReadMPCImage): Fix memory leak of values
-allocation.</li>
+allocation.
+(ReadMPCImage): Fix possible leak of profiles in error path. Fixes
+Coverity 80697 &quot;Resource leak&quot;.</li>
 </ul>
 </blockquote>
 <p>2015-05-04  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
